--- a/MyApp/Views/User/Add.cshtml
+++ b/MyApp/Views/User/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MyApp.Models.User
 <h2>Create User</h2>
-
+@* Ändra för att den ska inte se ut såhär *@
 <form asp-action="Add" method="post">
     <div class="row">
         <div class="col-md-6">
