User/UserController + Login + Program + Identity

--- a/MyApp/Views/User/Login.cshtml
+++ b/MyApp/Views/User/Login.cshtml
@@ -36,7 +36,7 @@
 
             <div class="text-center">
                 <p style="font-style: italic;">
-                    Har du inget konto? <a asp-controller="User" asp-action="Add" class="text-dark" style="text-decoration: underline;">Registrera dig här</a>
+                    Har du inget konto? <a asp-controller="User" asp-action="Register" class="text-dark" style="text-decoration: underline;">Registrera dig här</a>
                 </p>
             </div>
 
