--- a/MyApp/Views/User/Edit.cshtml
+++ b/MyApp/Views/User/Edit.cshtml
@@ -3,7 +3,7 @@
 <h2>Edit User</h2>
 
 <form asp-action="Edit" method="post">
-    <input type="hidden" asp-for="UserId" />
+    <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
         <label>Full Name</label>
