--- a/MyApp/Views/Shared/_Layout.cshtml
+++ b/MyApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿@using System.Security.Claims
+@using Microsoft.AspNetCore.Identity
+@using MyApp.Models
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +13,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MyApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -40,7 +45,7 @@
                                 <a class="nav-link text-dark" asp-controller="Project" asp-action="Index">Visa alla projekt</a>
                             </li>
                             <li class="nav-item ms-3">
-                                <a class="nav-link text-dark" asp-controller="User" asp-action="Edit" asp-route-id="@userId">Visa min profil</a>
+                                <a class="nav-link text-dark" asp-controller="User" asp-action="MyPage">Visa min profil</a>
                             </li>
                             <li class="nav-item ms-auto border-start ps-3">
                                 <a class="nav-link text-dark" asp-controller="User" asp-action="Logout" title="Logga ut">
