--- a/MyApp/Views/Message/ViewMessages.cshtml
+++ b/MyApp/Views/Message/ViewMessages.cshtml
@@ -91,12 +91,12 @@
 									{
 										<i class="bi bi-square" style="font-size: 1.3rem; color: #666;"></i>
 									}
-								<label class="small fw-bold mb-0" style="cursor: pointer; color: @textColor;">Läst</label>
+								<label class="small mb-0" style="cursor: pointer; color: @textColor;">Läst</label>
 								</button>
 							</form>
 						</div>
 					</div>
-					<p style="font-weight: @fontWeight; color: @textColor;">
+					<p style=" color: @textColor;">
 						@message.SentAt.ToString("yyyy-MM-dd HH:mm")
 					</p>
 				</div>
