--- a/MyApp/Views/Message/ViewMessages.cshtml
+++ b/MyApp/Views/Message/ViewMessages.cshtml
@@ -91,7 +91,7 @@
 									{
 										<i class="bi bi-square" style="font-size: 1.3rem; color: #666;"></i>
 									}
-								<label class="small mb-0" style="cursor: pointer; color: @textColor;">Läst</label>
+									<span class="small mb-0" style="cursor: pointer; color: @textColor;">Läst</span>
 								</button>
 							</form>
 						</div>
