--- a/MyApp/Views/Project/Add.cshtml
+++ b/MyApp/Views/Project/Add.cshtml
@@ -1,34 +1,59 @@
 ﻿@model MyApp.Models.Project
 
-<h2>Add Project</h2>
+<div class="Title" style="text-align: center; margin-top: 75px;">
+    <h3>Skapa ett projekt</h3>
+</div>
 
+<!-- Fyller i info om projektet -->
 <form asp-action="Add" method="post">
-    <div class="form-group">
-        <label>Title</label>
-        <input asp-for="Title" class="form-control" required />
+    <div style="width: 700px; margin: 0 18%;">
+        <div class="create-project project-title" style="margin-top: 50px;">
+            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Titel</label>
+            <input asp-for="Title" style="width: 500px;" required />
+        </div>
+
+        <div class="create-project project-description" style="margin-top: 50px;">
+            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Beskrivning</label>
+            <textarea asp-for="Description" style="width: 500px;" rows="4" required></textarea>
+        </div>
+
+        <div class="create-project project-programming-language" style="margin-top: 50px;">
+            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Programmeringsspråk</label>
+            <input asp-for="CodeLanguage" style="width: 500px;" required />
+        </div>
+
+        <div class="create-project project-start-date" style="margin-top: 50px;">
+            <label style="margin-left: 200px;">Startdatum</label>
+            <input asp-for="StartDate" placeholder="Ex. 2025-01-01" required />
+        </div> 
+        
+        <div class="create-project project-zip" style="margin-top: 50px;">
+            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Ladda upp ZIP-fil</label>
+            <input asp-for="ZipFile" style="width: 500px;" required />
+        </div>
+
+        <div class="create-project project-creator" style="margin-top: 50px;">
+            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Skapad av</label>
+            <select asp-for="CreatorId" asp-items="ViewBag.Creators" style="width: 500px;" required></select>
+        </div>
     </div>
 
-    <div class="form-group">
-        <label>Description</label>
-        <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-    </div>
-
-    <div class="form-group">
-        <label>Code Language</label>
-        <input asp-for="CodeLanguage" class="form-control" />
-    </div>
-
-    <div class="form-group">
-        <label>Zip Filename</label>
-        <input asp-for="ZipFile" class="form-control" />
-    </div>
-
-    <div class="form-group">
-        <label>Creator</label>
-        <select asp-for="CreatorId" class="form-control" asp-items="ViewBag.Creators"></select>
-    </div>
-
-    <br />
-    <button type="submit" class="btn btn-success">Save Project</button>
+    <button type="submit" class="btn btn-success">Spara</button>
     <a asp-controller="Home" asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
+
+@* Skapa i CSS:
+.create-project{
+    margin-top: 50px;
+}
+
+.create-project label{
+    display: inline-block; 
+    width: 150px; 
+    text-align: right; 
+    margin-right: 20px;
+}
+
+.create-project input{
+    width: 500px;
+} *@
