--- a/MyApp/Views/Home/Index.cshtml
+++ b/MyApp/Views/Home/Index.cshtml
@@ -28,6 +28,9 @@
             <div class="bg-light p-2" style="width: 47%; margin-right: 6%;">
                 <div style="width: 96%; margin: 0 auto; overflow-wrap: break-word;">
                     <h4>CV</h4>
+                    <iframe src="~/cv/test-cv.pdf"
+                            style="width:100%; height:100vh;">
+                    </iframe>
                 </div>
             </div>
             <div class="bg-light p-2" style="width: 47%;">
