--- a/MyApp/Views/Home/Index.cshtml
+++ b/MyApp/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
             @if (isLoggedIn)
             {
                 <a asp-controller="User"
-                   asp-action="MyPage"
+                   asp-action="Profile"
                    asp-route-id="@item.Id"
                    class="btn btn-light">
                     Se profil
